output.log
Traceback (most recent call last):
  File "/home/pi/Miura-2/main.py", line 13, in <module>
    import uplink
  File "/home/pi/Miura-2/uplink.py", line 74
    elif command == b'\x08' # emergency stop (ONLY USE FOR TESTING REALLY REALLY BAD)
                                                                                    ^
TabError: inconsistent use of tabs and spaces in indentation
Traceback (most recent call last):
  File "/home/pi/Miura-2/main.py", line 13, in <module>
    import uplink
  File "/home/pi/Miura-2/uplink.py", line 74
    elif command == b'\x08' # emergency stop (ONLY USE FOR TESTING REALLY REALLY BAD)
                                                                                    ^
SyntaxError: invalid syntax
Main thread initialized...
Utility thread initialized...
0 0 0
0 0 0
0 0 0
0 0 0
0 0 0
0 0 0
0 0 0
0 0 0
Auto change to valve 1...
0 0 0
0 0 0
0 0 0
0.004285714285714286 sec per step
0 0 0
Traceback (most recent call last):
  File "/home/pi/Miura-2/main.py", line 99, in <module>
    manual, stage, stage_start_time, solenoid_1_enabled, solenoid_2_enabled, tasks_completed = uplink.main(serial, downlink_queue, data_directory, manual, stage, stage_start_time, solenoid_1_enabled, solenoid_2_enabled, tasks_completed)
  File "/home/pi/Miura-2/uplink.py", line 75, in main
    subprocess.Popen('sudo killall python3', shell=True)
NameError: name 'subprocess' is not defined
